# galaxy-proxy

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  config.docker.toml  providers.json  test-proxy.sh
.codestable/: attention.md
.codestable/architecture/: 01-tech-stack.md  02-module-design.md  04-auth-system.md  ARCHITECTURE.md
.codestable/compound/: axonhub-analysis.md  ccg-gateway-analysis.md  sub2api-analysis.md
.codestable/features/2026-05-26-models-api/: models-api-acceptance.md  models-api-checklist.yaml  models-api-design.md
.codestable/requirements/: 01-project-vision.md  02-core-requirements.md  03-protocol-matrix.md
.codestable/roadmap/: 01-dev-plan.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  backup-format.md  frontend-redesign.md  installation.md  model-info-schema.md  models-apikey-refactor.md  playground.md  user-guide.md
docs/architecture/: 01-tech-stack.md  03-config-format.md
docs/references/: octopus-analysis.md
docs/requirements/: 01-project-vision.md  03-protocol-matrix.md  04-open-questions.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: api-keys.ts  auth.ts  backup.ts  channels.ts  client.ts  groups.ts  index.ts  model-info.ts  settings.ts  stats.ts  types.ts
frontend/src/components/: ChannelForm.tsx  ConfirmDeleteDialog.tsx  GroupForm.tsx  Pagination.tsx  StatusBadge.tsx  TestModelDialog.tsx  ToggleSwitch.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/ui/: dialog.tsx  (+1 more)
frontend/src/lib/: hooks.ts  utils.ts
frontend/src/pages/: ApiKeys.tsx  Channels.tsx  Dashboard.tsx  Groups.tsx  Login.tsx  Logs.tsx  Models.tsx  Playground.tsx  Settings.tsx  Setup.tsx  Stats.tsx  index.ts
frontend/src/stores/: auth.ts
scripts/: convert-octopus.py
src/: config.rs  lib.rs  main.rs  static_assets.rs
src/api/: mod.rs  response.rs  router.rs
src/api/middleware/: mod.rs
src/auth/: jwt.rs  mod.rs  password.rs
src/db/: mod.rs  schema.sql
src/protocol/: anthropic.rs  inbound.rs  mod.rs  model.rs  openai_chat.rs  openai_responses.rs  outbound.rs
src/proxy/: mod.rs  scheduler.rs  state.rs
src/stats/: aggregator.rs  cost.rs  mod.rs  model.rs  pricing_refresher.rs  recorder.rs
tests/: integration_test.rs
(+20 files in other folders)
