[package]
name = "galaxy-proxy"
version = "0.1.0"
edition = "2021"
description = "AI 协议互转代理网关"

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 配置
config = "0.14"
toml = "0.8"

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "stream"] }

# 错误处理
anyhow = "1"
thiserror = "1"

# 认证
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"

# 异步流
async-stream = "0.3"
tokio-stream = "0.1"
futures = "0.3"

# 正则
regex = "1"

# 时间
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
